--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
             <version>3.13.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.2.0</version>
+        </dependency>
 
     </dependencies>
 
